Refactor Added icon on save button

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -8,4 +8,6 @@
     <string name="save">Guardar</string>
     <string name="OK">OK</string>
     <string name="savedUppercase">GUARDADO</string>
+    <string name="errorUppercase">ERROR</string>
+    <string name="cancel">Cancelar</string>
 </resources>
